--- a/index.html
+++ b/index.html
@@ -1990,7 +1990,7 @@ From design & ethical hacking to marketing & automation — everything you need 
             passwordForm.addEventListener('submit', function(e) {
                 e.preventDefault();
                 
-                if (passwordInput.value === 'YARAM-KAZMI) {
+                if (passwordInput.value === 'YARAM-KAZMI') {
                     // Correct password
                     unlockPage();
                     hidePasswordModal();
@@ -2271,4 +2271,4 @@ From design & ethical hacking to marketing & automation — everything you need 
         });
     </script>
 </body>
-  </html>
+</html>
